--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   height: 100%;
-  padding: 1rem;
+  padding: 1rem 0;
   align-items: stretch;
 
   font-size: 1.7rem;
